php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39763 Double applied magic quotes
Submitted: 2006-12-07 10:14 UTC Modified: 2006-12-08 17:50 UTC
From: php dot 20 dot korkman at spamgourmet dot com Assigned: iliaa (profile)
Status: Closed Package: Strings related
PHP Version: 5.2.0 OS: SuSE Linux 9.0
Private report: No CVE-ID: None
 [2006-12-07 10:14 UTC] php dot 20 dot korkman at spamgourmet dot com
Description:
------------
parse_str() changed behaviour from PHP 5.14 to 5.2 in that it seems to apply the magic_quotes_gpc directive *twice*. Needless to say this causes heavy problems when using this function.


Reproduce code:
---------------
<?php
$arr = array();
parse_str("this=%22probably+a+bug%22", $arr);
echo $arr['this'];
?>

Expected result:
----------------
\"probably a bug\"

Actual result:
--------------
\\\"probably a bug\\\"

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-07 11:00 UTC] tony2001@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2006-12-08 17:10 UTC] tony2001@php.net
Reopened.
 [2006-12-08 17:50 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 17:00:01 2026 UTC