Fixed bug #39763 (magic quotes are applied twice by ext/filter in parse_str())